--- a/tkol_web2/Pages/Index.cshtml
+++ b/tkol_web2/Pages/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text">
+    <h1 class="display-2">Mr Bean</h1>
+    <p1> looking ass </p1>
 </div>
 
