we got animations now

--- a/tkol_web2/Pages/Index.cshtml
+++ b/tkol_web2/Pages/Index.cshtml
@@ -4,8 +4,28 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text">
+<style>
+    .testing{
+        align-content:center;
+    }
+
+    .img-style{
+        image-orientation:revert;
+    }
+</style>
+
+<div class="text-center">
     <h1 class="display-2">Mr Bean</h1>
-    <p1> looking ass </p1>
+
+    <div id="scroll-container" style="margin-bottom:30px">
+        <div id="scroll-text">
+            BREAKING: You look like fucking Mr. Bean ahahahahahahahahahahahahahaha
+        </div>
+    </div>
+
+    
+</div>
+<div>
+    <img class="img-style" src="https://cdn.comedy.co.uk/images/library/comedies/900x450/m/mr_bean_white.jpg"/>
 </div>
 
